--- a/SmogApp/Base.lproj/Main.storyboard
+++ b/SmogApp/Base.lproj/Main.storyboard
@@ -186,124 +186,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w5d-aq-5Vq" customClass="GMSMapView">
-                                <rect key="frame" x="0.0" y="44" width="600" height="472"/>
+                                <rect key="frame" x="0.0" y="44" width="600" height="512"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GzF-aE-T9w">
-                                <rect key="frame" x="0.0" y="516" width="600" height="40"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="b. dobry" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m7x-HE-7jB">
-                                        <rect key="frame" x="62" y="8" width="78" height="24"/>
-                                        <color key="backgroundColor" red="0.21176470588235294" green="0.60392156862745094" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="24" id="3Rj-aW-F90"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dobry" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sSf-8C-iDX">
-                                        <rect key="frame" x="144" y="8" width="78" height="24"/>
-                                        <color key="backgroundColor" red="0.29411764705882354" green="0.82352941176470584" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="24" id="3vI-s8-5Wv"/>
-                                            <constraint firstAttribute="height" constant="21" id="CMZ-lY-Tob"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                        <variation key="default">
-                                            <mask key="constraints">
-                                                <exclude reference="CMZ-lY-Tob"/>
-                                            </mask>
-                                        </variation>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Umiar." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ze-Af-9eF">
-                                        <rect key="frame" x="226" y="8" width="78" height="24"/>
-                                        <color key="backgroundColor" red="1" green="0.97254901960784312" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="24" id="b2v-Uh-IHJ"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zły" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jnj-V9-iL9">
-                                        <rect key="frame" x="390" y="8" width="78" height="24"/>
-                                        <color key="backgroundColor" red="0.91764705882352937" green="0.18823529411764706" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="24" id="ol9-Gq-LVb"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dost." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K7l-vN-WVQ">
-                                        <rect key="frame" x="308" y="8" width="78" height="24"/>
-                                        <color key="backgroundColor" red="0.93725490196078431" green="0.45490196078431372" blue="0.10196078431372549" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="24" id="pbZ-cf-Pg2"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="B.D." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="03B-av-ffl">
-                                        <rect key="frame" x="4" y="8" width="54" height="24"/>
-                                        <color key="backgroundColor" red="0.74509803921568629" green="0.80392156862745101" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="24" id="KIa-BG-N80"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="b. zły" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8C6-Ba-mAw">
-                                        <rect key="frame" x="472" y="8" width="78" height="24"/>
-                                        <color key="backgroundColor" red="0.38823529411764707" green="0.082352941176470587" blue="0.10588235294117647" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="24" id="RMc-Lj-g2b"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstItem="K7l-vN-WVQ" firstAttribute="leading" secondItem="9Ze-Af-9eF" secondAttribute="trailing" constant="4" id="2NS-pV-I3M"/>
-                                    <constraint firstItem="m7x-HE-7jB" firstAttribute="centerY" secondItem="GzF-aE-T9w" secondAttribute="centerY" id="7Sn-we-I1w"/>
-                                    <constraint firstItem="sSf-8C-iDX" firstAttribute="leading" secondItem="m7x-HE-7jB" secondAttribute="trailing" constant="4" id="7UU-Le-Jlk"/>
-                                    <constraint firstItem="Jnj-V9-iL9" firstAttribute="centerY" secondItem="GzF-aE-T9w" secondAttribute="centerY" id="7kX-Cr-XJo"/>
-                                    <constraint firstItem="8C6-Ba-mAw" firstAttribute="leading" secondItem="Jnj-V9-iL9" secondAttribute="trailing" constant="4" id="D2S-TT-jaK"/>
-                                    <constraint firstItem="sSf-8C-iDX" firstAttribute="width" secondItem="GzF-aE-T9w" secondAttribute="width" multiplier="0.13" id="DpX-C2-Fv1"/>
-                                    <constraint firstItem="03B-av-ffl" firstAttribute="width" secondItem="GzF-aE-T9w" secondAttribute="width" multiplier="0.09" id="GNh-d0-zDC"/>
-                                    <constraint firstItem="9Ze-Af-9eF" firstAttribute="leading" secondItem="sSf-8C-iDX" secondAttribute="trailing" constant="4" id="Mqs-IH-BbN"/>
-                                    <constraint firstItem="03B-av-ffl" firstAttribute="leading" secondItem="GzF-aE-T9w" secondAttribute="leading" constant="4" id="R8e-Fn-p5U"/>
-                                    <constraint firstItem="8C6-Ba-mAw" firstAttribute="width" secondItem="GzF-aE-T9w" secondAttribute="width" multiplier="0.13" id="aEa-Cp-0Dy"/>
-                                    <constraint firstItem="9Ze-Af-9eF" firstAttribute="centerY" secondItem="GzF-aE-T9w" secondAttribute="centerY" id="baA-Di-PMJ"/>
-                                    <constraint firstItem="K7l-vN-WVQ" firstAttribute="width" secondItem="GzF-aE-T9w" secondAttribute="width" multiplier="0.13" id="ceL-X8-4ek"/>
-                                    <constraint firstItem="Jnj-V9-iL9" firstAttribute="leading" secondItem="K7l-vN-WVQ" secondAttribute="trailing" constant="4" id="dFj-wF-Jn7"/>
-                                    <constraint firstItem="m7x-HE-7jB" firstAttribute="leading" secondItem="03B-av-ffl" secondAttribute="trailing" constant="4" id="dyW-1K-bNw"/>
-                                    <constraint firstItem="8C6-Ba-mAw" firstAttribute="centerY" secondItem="GzF-aE-T9w" secondAttribute="centerY" id="foW-x5-MK5"/>
-                                    <constraint firstItem="Jnj-V9-iL9" firstAttribute="width" secondItem="GzF-aE-T9w" secondAttribute="width" multiplier="0.13" id="gib-cw-AM0"/>
-                                    <constraint firstItem="sSf-8C-iDX" firstAttribute="centerY" secondItem="GzF-aE-T9w" secondAttribute="centerY" id="iIh-u6-2sd"/>
-                                    <constraint firstItem="m7x-HE-7jB" firstAttribute="width" secondItem="GzF-aE-T9w" secondAttribute="width" multiplier="0.13" id="jlD-GE-RrJ"/>
-                                    <constraint firstItem="03B-av-ffl" firstAttribute="centerY" secondItem="GzF-aE-T9w" secondAttribute="centerY" id="k0n-tc-iD4"/>
-                                    <constraint firstItem="9Ze-Af-9eF" firstAttribute="width" secondItem="GzF-aE-T9w" secondAttribute="width" multiplier="0.13" id="kY9-U2-QLL"/>
-                                    <constraint firstAttribute="height" constant="40" id="nx5-Wa-qX4"/>
-                                    <constraint firstItem="K7l-vN-WVQ" firstAttribute="centerY" secondItem="GzF-aE-T9w" secondAttribute="centerY" id="oux-uZ-ANB"/>
-                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="GzF-aE-T9w" firstAttribute="leading" secondItem="fXK-VO-UxA" secondAttribute="leadingMargin" constant="-20" id="068-TC-EHu"/>
-                            <constraint firstItem="GzF-aE-T9w" firstAttribute="bottom" secondItem="80K-eD-GpC" secondAttribute="top" id="3UZ-xv-qPn"/>
-                            <constraint firstItem="w5d-aq-5Vq" firstAttribute="top" secondItem="68X-h4-cr9" secondAttribute="bottom" id="6d0-Ht-Bve"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="GzF-aE-T9w" secondAttribute="trailing" constant="-20" id="V0x-7r-DUv"/>
-                            <constraint firstAttribute="trailing" secondItem="w5d-aq-5Vq" secondAttribute="trailing" id="YkC-h2-gQg"/>
-                            <constraint firstItem="w5d-aq-5Vq" firstAttribute="leading" secondItem="fXK-VO-UxA" secondAttribute="leading" id="cbP-5Q-dgf"/>
-                            <constraint firstItem="GzF-aE-T9w" firstAttribute="top" secondItem="w5d-aq-5Vq" secondAttribute="bottom" id="hYL-F5-Yc7"/>
+                            <constraint firstItem="w5d-aq-5Vq" firstAttribute="top" secondItem="68X-h4-cr9" secondAttribute="bottom" id="0Ih-Zf-Nq9"/>
+                            <constraint firstItem="w5d-aq-5Vq" firstAttribute="leading" secondItem="fXK-VO-UxA" secondAttribute="leading" id="AqN-YX-Pe4"/>
+                            <constraint firstItem="w5d-aq-5Vq" firstAttribute="bottom" secondItem="80K-eD-GpC" secondAttribute="top" id="IGN-Q2-66d"/>
+                            <constraint firstAttribute="trailing" secondItem="w5d-aq-5Vq" secondAttribute="trailing" id="kCu-kA-Xtm"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
@@ -352,7 +244,6 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="legendView" destination="GzF-aE-T9w" id="8Vt-H8-CW4"/>
                         <outlet property="menuButton" destination="gbj-P8-byR" id="mUe-P2-swY"/>
                         <outlet property="storyBoardMapView" destination="w5d-aq-5Vq" id="BjA-Zs-357"/>
                     </connections>
